--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emailInput" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/loginButton"
             android:layout_width="0dp"
             android:layout_height="56dp"
