--- a/app/src/main/res/layout/activity_add_quote.xml
+++ b/app/src/main/res/layout/activity_add_quote.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/addQuote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
