--- a/app/src/main/res/layout/fragment_quotes.xml
+++ b/app/src/main/res/layout/fragment_quotes.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/jokes"
+        android:id="@+id/quotes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
